src/test/ui/unsized-locals/issue-50940.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-50940.rs:3:5
   |
LL |     A as fn(str) -> A<str>;
   |     ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
